--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,13 +15,13 @@
 # docker-compose down
 
 version: "3"
-networks:
-  private:
-    driver: "bridge"
-    ipam:
-      driver: "default"
-      config:
-      - subnet: "172.30.0.0/16"
+#networks:
+#  private:
+#    driver: "bridge"
+#    ipam:
+#      driver: "default"
+#      config:
+#      - subnet: "172.30.0.0/16"
 
 services:
   zookeeper:
@@ -32,99 +32,93 @@ services:
       - "$PWD/tmp/kafka/zookeeper/data:/var/lib/zookeeper/data"
       - "$PWD/tmp/kafka/zookeeper/log:/var/lib/zookeeper/log"
       - "$PWD/tmp/kafka/zookeeper/secrets:/etc/zookeeper/secrets"
-    networks:
-      private:
-        ipv4_address: "172.30.0.2"
+ #   networks:
+ #     private:
+ #       ipv4_address: "172.30.0.2"
 
   kafka1:
     image: "confluentinc/cp-kafka"
     environment:
-      - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
-      - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.30.0.3:9092"
-      - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.3"
+ #     - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
+      - "KAFKA_ZOOKEEPER_CONNECT=localhost:2181"
+      - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://localhost:9092"
+ #     - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.3"
       - "KAFKA_BROKER_ID=1"
     volumes:
       - "$PWD/tmp/kafka/broker1/data:/var/lib/kafka/data"
       - "$PWD/tmp/kafka/broker1/secrets:/etc/kafka/secrets"
     depends_on:
       - "zookeeper"
-    networks:
-      private:
-        ipv4_address: "172.30.0.3"
+  #  networks:
+  #    private:
+  #      ipv4_address: "172.30.0.3"
 
-  kafka2:
-    image: "confluentinc/cp-kafka"
-    environment:
-      - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
-      - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.30.0.13:9092"
-      - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.13"
-      - "KAFKA_BROKER_ID=2"
-    volumes:
-      - "$PWD/tmp/kafka/broker2/data:/var/lib/kafka/data"
-      - "$PWD/tmp/kafka/broker2/secrets:/etc/kafka/secrets"
-    depends_on:
-      - "zookeeper"
-    networks:
-      private:
-        ipv4_address: "172.30.0.13"
+  #kafka2:
+  #  image: "confluentinc/cp-kafka"
+  #  environment:
+  #    - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
+  #    - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.30.0.13:9092"
+  #    - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.13"
+  #    - "KAFKA_BROKER_ID=2"
+  #  volumes:
+  #    - "$PWD/tmp/kafka/broker2/data:/var/lib/kafka/data"
+  #    - "$PWD/tmp/kafka/broker2/secrets:/etc/kafka/secrets"
+  #  depends_on:
+  #    - "zookeeper"
+  #  networks:
+  #    private:
+  #      ipv4_address: "172.30.0.13"
 
-  kafka3:
-    image: "confluentinc/cp-kafka"
-    environment:
-      - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
-      - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.30.0.23:9092"
-      - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.23"
-      - "KAFKA_BROKER_ID=3"
-    volumes:
-      - "$PWD/tmp/kafka/broker3/data:/var/lib/kafka/data"
-      - "$PWD/tmp/kafka/broker3/secrets:/etc/kafka/secrets"
-    depends_on:
-      - "zookeeper"
-    networks:
-      private:
-        ipv4_address: "172.30.0.23"
+  #kafka3:
+  #  image: "confluentinc/cp-kafka"
+  #  environment:
+  #    - "KAFKA_ZOOKEEPER_CONNECT=172.30.0.2:2181"
+  #    - "KAFKA_ADVERTISED_LISTENERS=PLAINTEXT://172.30.0.23:9092"
+  #    - "KAFKA_ADVERTISED_HOST_NAME=172.30.0.23"
+  #    - "KAFKA_BROKER_ID=3"
+  #  volumes:
+  #    - "$PWD/tmp/kafka/broker3/data:/var/lib/kafka/data"
+  #    - "$PWD/tmp/kafka/broker3/secrets:/etc/kafka/secrets"
+  #  depends_on:
+  #    - "zookeeper"
+  #  networks:
+  #    private:
+  #      ipv4_address: "172.30.0.23"
 
 
   kafkatopicsui:
     image: "landoop/kafka-topics-ui"
     environment:
-      - "KAFKA_REST_PROXY_URL=http://172.30.0.9:8082"
+      - "KAFKA_REST_PROXY_URL=http://localhost:8082"
 #      - "PROXY=true"
     depends_on:
       - "zookeeper"
       - "kafka1"
       - "kafkarest"
-    networks:
-      private:
-        ipv4_address: "172.30.0.12"
+ #   networks:
+ #     private:
+ #       ipv4_address: "172.30.0.12"
 
   kafkarest:
     image: "confluentinc/cp-kafka-rest"
     environment:
-      - "KAFKA_REST_BOOTSTRAP_SERVERS=PLAINTEXT://172.30.0.3:9092,PLAINTEXT://172.30.0.13:9092,PLAINTEXT://172.30.0.23:9092"
-      - "KAFKA_REST_ZOOKEEPER_CONNECT=172.30.0.2:2181"
-      - "KAFKA_REST_LISTENERS=http://172.30.0.9:8082"
-      - "KAFKA_REST_SCHEMA_REGISTRY_URL=http://172.30.0.4:8081"
-      - "KAFKA_REST_HOST_NAME=172.30.0.9"
+      - "KAFKA_REST_BOOTSTRAP_SERVERS=PLAINTEXT://localhost:9092"
+      - "KAFKA_REST_ZOOKEEPER_CONNECT=localhost:2181"
+      - "KAFKA_REST_LISTENERS=http://localhost:8082"
+      - "KAFKA_REST_SCHEMA_REGISTRY_URL=http://localhost:8081"
+      - "KAFKA_REST_HOST_NAME=localhost"
       - "KAFKA_REST_ACCESS_CONTROL_ALLOW_METHODS=GET,POST,PUT,OPTIONS"
       - "KAFKA_REST_ACCESS_CONTROL_ALLOW_ORIGIN=*"
     depends_on:
       - "zookeeper"
       - "kafka1"
-      - "kafka2"
-      - "kafka3"
       - "schemaregistry"
-    networks:
-      private:
-        ipv4_address: "172.30.0.9"
 
   kafkaconnect:
     image: "confluentinc/cp-kafka-connect"
     environment:
-      - "CONNECT_HOST_NAME=172.30.0.10"
-      - "CONNECT_REST_ADVERTISED_HOST_NAME=172.30.0.9"
       - "CONNECT_REST_PORT=8082"
-      - "CONNECT_BOOTSTRAP_SERVERS=PLAINTEXT://172.30.0.3:9092,PLAINTEXT://172.30.0.13:9092,PLAINTEXT://172.30.0.23:9092"
+      - "CONNECT_BOOTSTRAP_SERVERS=PLAINTEXT://localhost:9092"
       - "CONNECT_GROUP_ID=mytestconnect"
       - "CONNECT_CONFIG_STORAGE_TOPIC=mytestconnect-config"
       - "CONNECT_OFFSET_STORAGE_TOPIC=mytestconnect-offsets"
@@ -136,8 +130,8 @@ services:
       - "CONNECT_VALUE_CONVERTER=io.confluent.connect.avro.AvroConverter"
       - "CONNECT_INTERNAL_KEY_CONVERTER=org.apache.kafka.connect.json.JsonConverter"
       - "CONNECT_INTERNAL_VALUE_CONVERTER=org.apache.kafka.connect.json.JsonConverter"
-      - "CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL=http://172.30.0.4:8081"
-      - "CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL=http://172.30.0.4:8081"
+      - "CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL=http://localhost:8081"
+      - "CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL=http://localhost:8081"
       - "CONNECT_ACCESS_CONTROL_ALLOW_METHODS=GET,POST,PUT,OPTIONS"
       - "CONNECT_ACCESS_CONTROL_ALLOW_ORIGIN=*"
       - "CONNECT_LOG4J_ROOT_LEVEL=TRACE"
@@ -149,26 +143,19 @@ services:
     volumes:
       - "$PWD/kafka-connect/jars:/etc/kafka-connect/jars"
       - "$PWD/tmp/kafka/kafka-connect/secrets:/etc/kafka-connect/secrets"
-    networks:
-      private:
-        ipv4_address: "172.30.0.10"
 
   kafkaconnectui:
     image: "landoop/kafka-connect-ui"
     environment:
-      - "CONNECT_URL=172.30.0.10:8082"
+      - "CONNECT_URL=localhost:8082"
     depends_on:
       - "kafkaconnect"
-    networks:
-      private:
-        ipv4_address: "172.30.0.11"
 
   schemaregistry:
     image: "confluentinc/cp-schema-registry"
     environment:
-      - "SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL=172.30.0.2:2181"
-      - "SCHEMA_REGISTRY_HOST_NAME=172.30.0.4"
-      - "SCHEMA_REGISTRY_LISTENER=http://172.30.0.4:8081"
+      - "SCHEMA_REGISTRY_KAFKASTORE_CONNECTION_URL=localhost:2181"
+      - "SCHEMA_REGISTRY_LISTENER=http://localhost:8081"
       - "SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_METHODS=GET,POST,PUT,OPTIONS"
       - "SCHEMA_REGISTRY_ACCESS_CONTROL_ALLOW_ORIGIN=*"
     depends_on:
@@ -176,27 +163,10 @@ services:
       - "kafka1"
     volumes:
       - "$PWD/tmp/kafka/schema-registry/secrets:/etc/schema-registry/secrets"
-    networks:
-      private:
-        ipv4_address: "172.30.0.4"
 
   schemaregistryui:
     image: "landoop/schema-registry-ui"
     environment:
-      - "SCHEMAREGISTRY_URL=http://172.30.0.4:8081"
+      - "SCHEMAREGISTRY_URL=http://localhost:8081"
     depends_on:
       - "schemaregistry"
-    networks:
-      private:
-        ipv4_address: "172.30.0.8"
-
-  oraclexe:
-    image: "webdizz/oracle-xe-11g-sa"
-    environment:
-      - "processes=200"
-      - "DATABASES=sample"
-    volumes:
-      - "$PWD/tmp/oracle/data:/u01/app/oracle"
-    networks:
-      private:
-        ipv4_address: "172.30.0.15"
